# channels-last-groupnorm

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_push_docker_image.yml  on_pr.yml  on_push_main.yml  push_python_package.yml  python_end_to_end.yml  python_lint_and_test.yml
docker/: Dockerfile  build.py  ecr_config.yml
src/channels_last_groupnorm/: README.md  __init__.py  main.py
src/gnnhwc/: __init__.py  custom_gn.py
src/gnnhwc/csrc/: Welford.h  custom_gn.cpp  gn_kernel.cu  gn_kernel.h
tests/: check_outputs.py  nchw_nhwc_equal.py  test_example.py  test_nchw_nhwc_equal.py  test_trailing_dims.py  trailing_dims.py
